--- a/upstream.conf
+++ b/upstream.conf
@@ -1,3 +1,3 @@
-#upstream php-handler {
-#    server ${NEXTCLOUD_HOST}:9000;
-#}
+upstream php-handler {
+    server 'return os.getenv("NEXTCLOUD_HOST")':9000;
+}
