Use perl_set inside upstream.conf

--- a/upstream.conf
+++ b/upstream.conf
@@ -1,3 +1,4 @@
 upstream php-handler {
-    server 'return os.getenv("NEXTCLOUD_HOST")':9000;
+    perl_set $nextcloud_host 'sub { return $ENV{"NEXTCLOUD_HOST"}; }';
+    server $nextcloud_host:9000;
 }
